--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           </div>
           <div class="info">
             <h1>لاجهزة الموبايل</h1>
-            <div class="version">نسخة 1.1.1</div>
+            <div class="version">نسخة 1.1.2</div>
             <ul>
-              <li>حل مشكلة التريلر والقصة باللغة العربي</li>
+              <li>حل مشكلة المقترحة</li>
             </ul>
             <div class="version">نسخة 1.1.0</div>
             <ul>
