--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>لاجهزة الموبايل</h1>
             <div class="version">نسخة 1.1.2</div>
             <ul>
-              <li>حل مشكلة المقترحة</li>
+              <li>حل مشكلة التحميل</li>
             </ul>
             <div class="version">نسخة 1.1.0</div>
             <ul>
